# FimicsC

./: .gitignore  CMakeLists.txt  ebook.txt  zshrc.txt
.run/: Template CTest Application.run.xml  Template Google Test.run.xml
googletest/: CMakeLists.txt
googletest/googletest/: README.md
linux/: a.out  test.tar
linux/makefile/: add.c  app1  div.c  main.c  makefile  makefile1  makefile2  makefile3  makefile4  makefile5  mul.c  sub.c
md/: C标准.txt  c编译过程.txt  keyword.txt
ndk/c/: Function.cpp  Pointer.cpp
ppt/: Docker简介.pptx
resource/: a.txt  config.ini  f.txt  file.txt  fputs.txt  obj.txt
src/: Array.c  DataType.c  Function.c  String.c  ZJunior-c.txt  main.c
src/array/: Array.c  Array.h  Array2d.c  ArrayAndPointer.c  Srand.c  StringArray.c  YArray.c  YArray.h  vararr2d.c
src/complex/: EnumDemo.c  StructArray.c  StructDefine.c  StructFunction.c  StructMemory.c  StructPointer.c  StructSort.c  Structstruct.c  TypeDefDemo.c  UnionDemo.c  YComplex.c  YComplex.h  structArray.c  structSort.c
src/datastructure/: DynamicArray.c  DynamicArray.h  LinkedList.c  LinkedList.h  LinkedList1.c  LinkedList1.h  Sort.c  YDataStructure.c  YDataStructure.h
src/datatype/: BinaryConvert.c  Char.c  DataType.c  DataType.h
src/file/: FileBigDataSort.c  FileBuffer.c  FileCat.c  FileCopy.c  FileFscanf.c  FileMvRmRename.c  FileOperate.c  FileProperty.c  FileRandomAccess.c  FreadFwrite.c  YFile.c  YFile.h
src/function/: Function.h  FunctionDemo.c  YFunction.c  YFunction.h
src/improve/: DataType.c  IArray.c  IBitOperation.c  IConst.c  IDataType.c  IFile.c  IFileConfig.c  IFileConfig.h  IFunction.c  IFunctionPointer.c  IMemory.c  IPointer.c  IPointerFunction.c  IPreprocessingInstruction.c  ISecondaryPointer.c  IString.c  IStruct.c  ISumUp.c  YGlobal.c  YImprove.c  YImprove.h
src/memory/: MemArea.c  MemAreac  MemFunction.c  MemGlobal.c  MemHeap.c  Scope.c  YMemory.c  YMemory.h
src/pointer/: ConstDemo.c  Pointer.c  PointerAndArray.c  PointerAndParameter.c  PointerBubbleSort.c  PointerDefine.c  PointerMultilevel.c  PointerOperation.c  PointerReturnValue.c  PointerStrchr.c  PointerString.c  WildNullpointer.c  YPointer.c  YPointer.h
src/string/: FgetsFputs.c  GetssPuts.c  PrintfScanf.c  SprintfSscanf.c  StrFind.c  Strchr.c  String.c  String.h  StringInputOutput.c  StrlenStrcpy.c  YString.c  YString.h  strtokAtoi.c
src/system/: System.c  System.h
srcplus/: App.cpp  main.cpp
srcplus/array/: Array.cpp  Array.h
srcplus/base/: Basic.cpp  Basic.h
srcplus/design/: Singleton.cpp  Singleton.h  YDesign.cpp  YDesign.h
srcplus/exception/: FException.cpp  FException.h  TypeCast.cpp  TypeCast.h
srcplus/extends/: ExtendsMode.cpp  ExtendsMode.h  FExtends.cpp  FExtends.h  Polymorphism.cpp  Polymorphism.h  TypeCast.cpp  TypeCast.h
srcplus/function/: ExternC.c  ExternC.cpp  ExternC.h  FunctionPointer.cpp  FunctionPointer.h  ReferenceVariable.h  ReferenceVariavle.cpp  YFunction.cpp  YFunction.h
srcplus/funtemplate/: FunTemplate.cpp  FunTemplate.h
srcplus/io/: IO.cpp  IO.h
srcplus/memory/: FMemory.cpp  FMemory.h
srcplus/objecto/: Circle.cpp  Circle.h  ClassMember.cpp  ClassMember.h  FriendClass.cpp  FriendClass.h  InitObject.cpp  InitObject.h  ObjectModel.cpp  ObjectModel.h  Packing.c  Packing.cpp  Packing.h  StaticDemo.cpp  StaticDemo.h  YObjectO.cpp  YObjectO.h
srcplus/operator/: YOperator.cpp  YOperator.h
srcplus/stl/: DequeContainer.cpp  DequeContainer.h  FStl.cpp  FStl.h  ListContainer.cpp  MultiMapContainer.cpp  PairContainer.h  QueueContainer.h  SetContainer.cpp  StackContainer.h  StringContainer.cpp  StringContainer.h  VectorContainer.cpp  VectorContainer1.cpp  VectorContainer1.h  YStl.cpp
srcplus/string/: String.cpp  String.h  StringDemo.cpp  StringDemo.h
structure/: Fib.cpp  O.cpp  ProgramIndex.htm  Sum.cpp  adjacencyGraph.h  adjacencyWDigraph.h  arrayQueue.cpp  arrayQueue.h  arrayStack.cpp  arrayStack.h  averageSortTime.cpp  binarySearchTree.h  binaryTreeTraversals.cpp  binsort1.cpp  booster.cpp  bsTree.h  chainWithBinSort.h  chainWithIterator.cpp  chainWithIterator.h  circularListWithHeader.h  closestPoints.cpp  completeWinnerTree.h  componentLabeling.cpp  crossings.cpp  derivedArrayStack.cpp  derivedArrayStack.h  derivedArrayStackWithCatch.cpp  derivedArrayStackWithCatch.h  derivedLinkedStack.cpp  derivedLinkedStack.h  diagonalMatrix.h  eventList.h  extendedArrayList.h  extendedChain.h  extendedLinearList.h  fifoBBLoading1.cpp  fifoBBLoading2.cpp  fifoBBLoading3.cpp  graph.h  graphChain.h  (+74 more)
structure/10nd_skiplist_hash/: dictionary.h  hash.h  hashChains.cpp  hashTable.h  pairNode.h  skipList.cpp  skipList.h  sortedChain.cpp  stringToInt.cpp  threeToLong.cpp
structure/11nd_binary_tree/: binaryTreeNode.h  binaryTreeTraversals.cpp  linkedBinaryTree.h
structure/12nd_priority_queue/: huffmanTree.cpp  machine.h  machineShopSimulator.cpp  maxHblt.cpp  maxHblt.h  maxHeap.cpp  maxHeap.h  minHeap.h
structure/13nd_tournament_tree/: completeWinnerTree.cpp  completeWinnerTree.h  firstFit.cpp  leastCostBBBoard.cpp
structure/14nd_search_tree/: binarySearchTree.h  bsTree.h
structure/16nd_graph/: adjacencyGraph.h  adjacencyWDigraph.h  graph.h  graphChain.h  linkedDigraph.h  linkedWDigraph.h  unweightedEdge.h
structure/17nd_greedy_method/: componentLabeling.cpp
structure/1nd_review/: abcException.cpp  abcExceptionChar.cpp  indexOfMax.cpp  myExceptions.h  sumCount1.cpp  sumCount2.cpp
structure/2nd_performance_analysis/: matrixAdd.cpp  matrixMultiply1.cpp  matrixMultiply2.cpp  matrixMultiply3.cpp  matrixTranspose.cpp  matrixWithTranspose.h  quickSort.h  selectionSort.cpp
structure/4nd_performance_measurement/: timeInsertionSort1.cpp  timeInsertionSort2.cpp  timeInsertionSort3.cpp  timeInsertionSort4.cpp
structure/5nd_arraylist/: arrayList.h  arrayListNoSTL.h  arrayListWithIterator.h  changeLength1D.h  extendedArrayList.h  vectorList.h
structure/6nd_linkedlist/: binsort1.cpp  chain.cpp  chain.h  chainNode.h  chainWithBinSort.h  chainWithIterator.cpp  chainWithIterator.h  circularListWithHeader.h  extendedChain.h  extendedLinearList.h  (+1 more)
system/: mian.c
(+162 files in other folders)
